<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context="com.jtien.belizebus.MainActivity">

    <!--
    <TextView
        android:id="@+id/blank1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/blank1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/btn_info"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Spinner
        android:id="@+id/spinner_depart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:background="@drawable/main_field_half_upper"
        android:popupBackground="@drawable/main_dialog"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_depart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:background="@drawable/main_field_half_lower"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_after"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="24sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3">
        <!--
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:gravity="center">
        -->

        <Button
            android:id="@+id/btn_history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="#00000000"
            android:text="@string/btn_history"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/btn_switch"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginBottom="4dp"
                android:text="@string/btn_switch"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
        -->
        <!--</RelativeLayout>-->
    </android.support.constraint.ConstraintLayout>

    <Spinner
        android:id="@+id/spinner_arrive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:background="@drawable/main_field_half_upper"
        android:popupBackground="@drawable/main_dialog"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_arrive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:background="@drawable/main_field_half_lower"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/btn_before"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/blank2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btn_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/main_button_map"
            android:text="@string/btn_map"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:background="@drawable/main_button_submit"
            android:text="@string/btn_search"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_map"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <!--
    <android.support.constraint.ConstraintLayout
        android:id="@+id/blank3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <Button
            android:id="@+id/btn_record"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="☆"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
    -->

    <TextView
        android:id="@+id/blank3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />


</LinearLayout>